# program-metadata-http-service

./: .gitignore  Cargo.toml  Dockerfile  README.md
examples/: client.rs
src/: build.rs  main.rs
