[package]
name = "program-metadata-web-service"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
tar = "0.4.40"
thiserror = "1.0.56"
tokio = { version="1.36.0", features=["rt-multi-thread"] }
tower-http = { version="0.5.1", features=["fs"] }
sp-runtime = { version="24.0.0", default-features=true }
sp-core              ="21.0.0"
cargo_metadata = "0.18.1"
sled = "0.34.7"
hex = "0.4.3"
serde_json = "1.0.113"
temp-dir = "0.1.12"
